--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-236.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇳 中国-502.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-423.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-575.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-385.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇯🇵 日本-324.9KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-996.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-2.63MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-324.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
