--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-381.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-222.1KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-964.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: 175c218a-fb8d-46b0-a7af-b9ff6a719856, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-996.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇭🇰 香港-3.51MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇭🇰 香港-153.9KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: bb17cd59-0839-4824-b734-ace2b6bca6d4, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-358.6KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-444.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
   - {name: 🇭🇰 香港-2.63MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,22 +52,22 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,14 +75,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -90,14 +90,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -106,14 +106,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -131,14 +131,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活6天)香港-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-964.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-996.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.63MB/s(Youtube:不良林)
 rules:
